--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,8 +222,8 @@ h1 {
 
 @media screen and (max-width: 700px) {
   .section{
-  margin-left: -155px;
-  padding-right: 50px;
+  margin-left: -30%;
+  padding-right: 10%;
   }
   .text {
     font-size: 0.6px;
@@ -319,6 +319,7 @@ c {
 .avatar{
   margin-top: 40px;
   height: 300px;
+  width: auto;
   border-radius: 1%;
   display: inline-block;
 }
@@ -472,7 +473,7 @@ p {
 
 @media screen and (max-width: 1200px) {
   .tabcontent {
-  margin-left: 70px;
+  margin-left: 20%;
   width: 80%;
   }
   .tab {
