--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,7 +244,7 @@ html, body{
 }
 
 .section1 {
-	background-image : url('../img/Web_bg.png');
+	background-image : url('../img/web_bg.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
