--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -328,7 +328,7 @@ h1 {
   }
   .section1{
     margin-left: -3%;
-    padding-left: 25%;
+    padding-left: 20%;
     }
 
   h1 {
@@ -336,10 +336,11 @@ h1 {
     }
 
   .text {
-    margin-left: 6px;
+    margin-left: -10px;
+    font-size: 8px;
   }
   .word{
-    margin-left: -8px;
+    margin-left: -3px;
   }
 }
 
@@ -431,9 +432,6 @@ c {
   float:left;
 }
 
-.avatar:hover{
-  opacity: 1%;
-}
 
 #about .abouttext {
   color: #59646d;
@@ -506,6 +504,9 @@ c {
   .sectiontitle{
     margin-left: -3px;
     font-size: 20px;
+  }
+  .avatar{
+    margin-left: 0px;
   }
   
 }
