--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 html, body{
 	font-size:16px;
 	color: #dfdfdf;
-	background-color: #063647; 
+	background-color: #495579;
 }
 
 a {
@@ -18,11 +18,12 @@ section{
 }
 
 .section-1 {
-	background: #063647;
+	background: rgb(38,49,89);
+background: radial-gradient(circle,  rgba(216,205,181,1) 7%, rgba(38,49,89,1) 25%);
 }
 
 .section-2 {
-	background-color: #052D3D;
+	background-color: rgb(38,49,89);
 }
 
 .section-3 {
@@ -68,7 +69,7 @@ a.nav-item:hover {
 }
 
 .box {
-	background-color: transparent;
+	background-color: #77898B;
 	border: 2px solid rgba(7, 59, 79, 0.5);
 }
 
@@ -85,7 +86,7 @@ a.nav-item:hover {
 }
 
 .void-background {
-	background-color: transparent; 
+	background-color: transparent;
 }
 
 @media screen and (max-width: 768px) {
