Better link projects, left improve figure and figcaption

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,6 +71,7 @@ figure {
   border: 1px #cccccc solid;
   padding: 4px;
   margin: auto;
+	height: 70%;
 }
 
 figcaption {
@@ -78,7 +79,6 @@ figcaption {
   color: white;
   font-style: italic;
   padding: 2px;
-  text-align: center;
 }
 
 section{
