--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,6 +42,7 @@ div img{
 }
 
 main-rp{
+	padding: 0px 10px;
 	display: grid;
 	grid-template-columns: auto auto auto;
 	grid-template-rows: auto auto auto;
@@ -51,15 +52,19 @@ main-rp{
 }
 
 .index{
+	overflow-y: auto;
+	position: sticky;
+	top: 0;
+	border-collapse: collapse;
 	background: rgb(38,49,89);
-	background: radial-gradient(circle,  rgba(216,205,181,1) 30%, rgba(38,49,89,1) 57%);
-	height: 300px;
+	height: auto;
 	border: 2px solid rgb(0,49,89);
-
+	grid-column: 1/2;
 }
 .avatar-index{
 	height: 300px;
 	border-radius: 50%;
+	background: radial-gradient(circle,  rgba(216,205,181,1) 30%, rgba(38,49,89,1) 57%);
 }
 
 .rp{
@@ -79,7 +84,55 @@ figcaption {
   color: white;
   font-style: italic;
   padding: 2px;
+	text-align: center;
 }
+
+.cv{
+	text-align: center;
+	padding: 2px 300px;
+
+}
+.nav-list {
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  padding: 10px;
+	grid-column: 1/2;
+	overflow-y: auto
+	max-height: calc(100vh - 50px); /* Set the maximum height of the table of contents */
+}
+
+.nav-list ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-list li {
+  margin: 0;
+  padding: 0;
+}
+
+.nav-list a {
+  text-decoration: none;
+	color: blue;
+}
+
+.nav-list a:hover {
+  text-decoration: underline;
+}
+
+.nav-list ul ul {
+  margin-left: 10px;
+}
+
+.nav-list li:before {
+  content: "• ";
+  font-size: 18px;
+  line-height: 1;
+  margin-right: 5px;
+	color: blue;
+}
+
 
 section{
 	padding-top: 3rem;
@@ -88,7 +141,7 @@ section{
 
 .section-1 {
 	background: rgb(38,49,89);
-background: radial-gradient(circle,  rgba(216,205,181,1) 10%, rgba(38,49,89,1) 35%);
+/* background: radial-gradient(circle,  rgba(216,205,181,1) 10%, rgba(38,49,89,1) 35%); */
 }
 
 .section-2 {
@@ -115,6 +168,7 @@ a.nav-item:hover {
 .avatar{
 	height:400px;
 	border-radius: 50%;
+	background: radial-gradient(circle,  rgba(216,205,181,1) 40%, rgba(38,49,89,1) 62%);
 }
 
 .intro-description{
@@ -154,8 +208,9 @@ a.nav-item:hover {
 	margin: 0 auto;
 }
 .footer{
-	padding: 5px;
+	padding: 15px;
 	background: transparent;
+	text-align: right;
 }
 .footer img{
 	max-height: 40px;
@@ -182,4 +237,26 @@ a.nav-item:hover {
 		background-color: #fff;
 	}
 
+}
+
+/* For navegation list of titles and subtitles */
+
+@media only screen and (max-width: 600px) {
+  .nav-list {
+    overflow: auto;
+  }
+
+  .nav-list ul {
+    display: inline-block;
+    margin-left: -20px;
+  }
+
+  .nav-list li {
+    display: block;
+    margin-left: 20px;
+  }
+
+  .nav-list li:before {
+    content: none;
+  }
 }
