--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,10 +86,12 @@ figcaption {
 }
 
 .cv{
+	display: grid;
 	text-align: center;
-	padding: 2px 300px;
-
+	padding: 2px;
 }
+
+
 .nav-list {
   background-color: rgb(38,49,89);
   /* border: 1px solid #ccc; */
@@ -242,9 +244,35 @@ a.nav-item:hover {
     background-color: #1c6ea4;
   }
 
+/* scrollbar */
+
+.scroll-container {
+	height: 200px;
+	overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 2.5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
+
+
+
 /* cellphone */
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 900px) {
 	.nav-menu {
 		background-color: #063647;
 	}
