--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,15 +16,17 @@ h1{
 	text-align: center;
 	padding: 40px;
 	font-weight: bold;
+	text-transform: uppercase;
 }
 h2{
 	color: black;
 padding: 20px;
 font-weight: bold;
+text-transform: uppercase;
 }
-li{
+/* li{
 	color: black;
-}
+} */
 h3{
 	color: black;
 padding: 20px;
@@ -47,6 +49,14 @@ div img{
 	margin: auto;
 	max-height: 70%;
 	max-width: 70%;
+}
+
+ul{
+	list-style: circle;
+}
+
+ul li::before{
+	color: black;
 }
 
 main-rp{
